--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "devDependencies": {
     "@badeball/cypress-cucumber-preprocessor": "^11.4.0",
+    "@bahmutov/cy-api": "^2.2.3",
     "@cypress/webpack-preprocessor": "^5.12.0",
     "cypress": "^10.3.0",
     "cypress-fill-command": "^1.0.2"
