--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Project automation cypress ",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "my-server -p 3030",
+    "cy:run": "cypress run",
+    "test": "start-server-and-test start http://localhost:3030 cy:run"
   },
   "author": "Karolyne Silva",
   "license": "MIT",
@@ -13,7 +15,8 @@
     "@bahmutov/cy-api": "^2.2.3",
     "@cypress/webpack-preprocessor": "^5.12.0",
     "cypress": "^10.3.0",
-    "cypress-fill-command": "^1.0.2"
+    "cypress-fill-command": "^1.0.2",
+    "start-server-and-test": "^1.15.4"
   },
   "dependencies": {
     "faker": "^5.5.3"
