--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -19,7 +19,7 @@ jobs:
         with:
           # Starts web server for E2E tests - replace with your own server invocation
           # https://docs.cypress.io/guides/continuous-integration/introduction#Boot-your-server
-          install-command: npm install
+          install-command: npm install cypress
           start: npm start
           wait-on: 'http://localhost:3000' # Waits for above
           wait-on-timeout: 120
