--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -29,8 +29,8 @@ jobs:
           PORT: 3000 # Ajuste se necessário para o seu ambiente
 
       - name: Wait for server to be ready
-        run: npx wait-on http://localhost:3000
-        timeout-minutes: 5
+        run: npx wait-on http://localhost:3000 --timeout=300000 --retry=10
+        timeout-minutes: 10
 
       - name: Run Cypress tests
         uses: cypress-io/github-action@v4
