--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -25,18 +25,22 @@ jobs:
 
       - name: Start server
         run: |
-          npm start &
-          sleep 10 # Aguarda 10 segundos para o servidor iniciar
+          npm run start &
+          sleep 30 # Aguarda 30 segundos para o servidor iniciar
         env:
-          PORT: 3000 # Ajuste se necessário para o seu ambiente
+          PORT: 3030 # Ajuste se necessário para o seu ambiente
+
+      - name: View server logs
+        run: |
+          tail -n 50 /path/to/your/server/logs || echo "Logs not available"
 
       - name: Check server status
         run: |
-          curl -I http://localhost:3000 || echo "Server is not running"
-        continue-on-error: true # Permite que o trabalho continue mesmo se o comando falhar
+          curl -I http://localhost:3030 || echo "Server is not running"
+        continue-on-error: true
 
       - name: Wait for server to be ready
-        run: npx wait-on http://localhost:3000 --timeout=600000 --retry=10
+        run: npx wait-on http://localhost:3030 --timeout=600000 --retry=10
         timeout-minutes: 10
 
       - name: Run Cypress tests
