--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Project automation cypress ",
   "main": "index.js",
   "scripts": {
-    "start": "my-server -p 3030",
+    "start": "node server.js",
     "cy:run": "cypress run",
     "test": "start-server-and-test start http://localhost:3030 cy:run"
   },
@@ -19,6 +19,7 @@
     "start-server-and-test": "^2.0.5"
   },
   "dependencies": {
-    "faker": "^5.5.3"
+    "faker": "^5.5.3",
+    "my-server": "^2.0.7"
   }
 }
