--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Project automation cypress ",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "./node_modules/my-server/lib/server.js",
     "cy:run": "cypress run",
     "test": "start-server-and-test start http://localhost:3030 cy:run"
   },
